--- a/create_graph_eval_2_frag_states_and_events.ipynb
+++ b/create_graph_eval_2_frag_states_and_events.ipynb
@@ -1309,8 +1309,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ec.get_attribute_version_evolution_from_elementary_elements(graphdb_url, facts_repository_name,\n",
-    "                                                            facts_named_graph_uri, inter_sources_name_graph_uri, tmp_named_graph_uri)\n",
+    "ec.get_attribute_version_evolution_from_elementary_elements(\n",
+    "    graphdb_url, facts_repository_name,\n",
+    "    facts_named_graph_uri, inter_sources_name_graph_uri, tmp_named_graph_uri)\n",
     "\n",
     "# Remove temporary named graph (which is used for construction)\n",
     "gd.remove_named_graph_from_uri(tmp_named_graph_uri)"
